<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.istech.expensestracker.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_expenseList"
            app:destination="@id/expenseListFragment" />
        <action
            android:id="@+id/action_dashboard_to_addExpense"
            app:destination="@id/addExpenseFragment" />
        <action
            android:id="@+id/action_dashboard_to_setBudget"
            app:destination="@id/setBudgetFragment" />
        <action
            android:id="@+id/action_dashboard_to_pieChart"
            app:destination="@id/pieChartFragment" />
    </fragment>

    <fragment
        android:id="@+id/expenseListFragment"
        android:name="com.istech.expensestracker.ui.expenses.ExpenseListFragment"
        android:label="@string/expense_list_title"
        tools:layout="@layout/fragment_expense_list" />

    <fragment
        android:id="@+id/addExpenseFragment"
        android:name="com.istech.expensestracker.ui.expenses.AddExpenseFragment"
        android:label="@string/add_expense_title"
        tools:layout="@layout/fragment_add_expense" />

    <fragment
        android:id="@+id/setBudgetFragment"
        android:name="com.istech.expensestracker.ui.budget.SetBudgetFragment"
        android:label="@string/set_budget_title"
        tools:layout="@layout/fragment_set_budget" />

    <fragment
        android:id="@+id/pieChartFragment"
        android:name="com.istech.expensestracker.ui.analytics.PieChartFragment"
        android:label="@string/pie_chart_title"
        tools:layout="@layout/fragment_pie_chart" />

</navigation> 